added some fixture and unit test script for minute model.
 Please enter the commit message for your changes. Lines starting
 with '#' will be ignored, and an empty message aborts the commit.
 On branch master
 Changes to be committed:
   (use "git reset HEAD <file>..." to unstage)

	modified:   config/database.yml
  modified:   test/fixtures/articles.yml
  modified:   test/fixtures/minutes.yml
	modified:   test/fixtures/types.yml
	modified:   test/fixtures/users.yml
	modified:   test/unit/minute_test.rb

--- a/test/fixtures/minutes.yml
+++ b/test/fixtures/minutes.yml
@@ -1,13 +1,12 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
-one:
-  title: MyString
-  name: MyString
-  place: MyString
+mtg01:
+  title: 
+  place: small meeting room
   scheduled_at: 2011-11-06 00:33:45
 
-two:
-  title: MyString
-  name: MyString
-  place: MyString
+mtg02:
+  title: development team source code review
+  place: large meeting room
   scheduled_at: 2011-11-06 00:33:45
+
